--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "devDependencies": {
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1"
+  },
   "dependencies": {
     "markdown-it": "^14.1.0"
   }
